2007-11-20  Valek Filippov  <frob@df.ru>

    * eo.charset was lost accidently somehow.

2007-11-19  Valek Filippov  <frob@df.ru>

    * Release 0.0.10.
    * Most likely the last release with naive object model.
    
2007-11-14  Valek Filippov  <frob@df.ru>

    * pymfvu.py, mfpage.py: slider was ported from vsdviewer.

2007-11-02  Valek Filippov  <frob@df.ru>

    * wmftext.py,mfdraw.py: fixed bug with Orientation checking.

2007-11-01  Valek Filippov  <frob@df.ru>

    * Release 0.0.9
    * Added workaround for rotated text bug in Adobe Illustrator ('On' by default).

2007-10-24  Valek Filippov  <frob@df.ru>

    * Patterns Fill code was changed to use *.png instead of arrays.

2007-10-21  Valek Filippov  <frob@df.ru>

    * Release 0.0.8
    * mfpage.py, mfdraw.py: start to merge WMF and EMF code
    * sort of batch-mode was added
    

2007-10-03  Valek Filippov  <frob@df.ru>

    * wmfdraw.py, wmffigs.py: synced back from vsdviewer.
    * wmfdoc.py, pymfvu.py: moved page size detection, backported scrolled/zoom from vsdviewer.
    * pymfvu.py: fixed hexdump show/hide/update bug.
    
2007-09-24  Valek Filippov  <frob@df.ru>

    * wmftext.py: Added reencoding of text from font encoding to UTF-8.
    
2007-09-23  Valek Filippov  <frob@df.ru>

    * wmfdraw.py, emfdraw.py, emfcmd.py: Added IntersectClipRegion.
    
2007-09-14  Valek Filippov  <frob@df.ru>

    * wmffigs.py, emfdraw.py: Fixed arc/pie/chors for 'intentionally wrong' cases.
    * test/*: added dir with testing files and screenshots of them.
    
2007-09-12  Valek Filippov  <frob@df.ru>

    Version 0.0.4
    * pywmf.py: Improved EOF checking
    * wmffigs.py, emfdraw.py: Fixed roundrect for 'intentionally wrong' cases, some code clean-up
    * emf*: added license statement
    * pyemf.py: added while Rob will make a release with load_mem function

2007-09-04  Valek Filippov  <frob@df.ru>

    * Version 0.0.3.
      Merged with pyemfvu and renamed to pymfvu.
      Implemented line cap/join.